compiler/tests/fixtures/parse_err/missing_brace.vibe
topK(xs, k) {
  @intent "k largest numbers"
  xs.sort_desc().take(k)
